Promote to stage environment

--- a/components/nodejs-ezdgbfrt/overlays/stage/deployment-patch.yaml
+++ b/components/nodejs-ezdgbfrt/overlays/stage/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
+      - image: artifactory-docker-artifactory-jcr2.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/nodejs-ezdgbfrt:github-861e957e6896e81e3d54f3032fa49eb04da2782d
         name: container-image  
